--- a/testerGPS/.project
+++ b/testerGPS/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>testerGPS</name>
+	<name>tester_G320</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1645613214640</id>
+			<id>0</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
